Fix a bug that the focus indicator is not visible

--- a/src/unipos/recipient/style.css
+++ b/src/unipos/recipient/style.css
@@ -32,7 +32,5 @@ button#remove {
   background-color: transparent;
   border: 0;
   cursor: pointer;
-  outline: none;
   padding: 0;
-  appearance: none;
 }
